--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "changelog": "conventional-changelog -p angular -i CHANGELOG.md -s -r 0",
     "build": "npm run clean && npm run compile",
     "preversion": "npm run build",
-    "version": "npm run changelog"
+    "version": "npm run changelog",
+    "prepare": "npm run build"
   },
   "repository": {
     "type": "git",
